experimental fix for whitespace under footer on chrome

--- a/janiczek.css
+++ b/janiczek.css
@@ -16,6 +16,7 @@ html {
     -o-font-smoothing:antialiased;
     font-smoothing:antialiased;
     text-rendering:optimizeLegibility;
+    overflow: hidden;
 }
 body {
     margin: 0 auto;
